--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
 					Or step by step <br>
 					<button type="button" onclick="deleteDominos()">Step 1: Delete</button>
 					<button type="button" onclick="slideDominos()">Step 2: Slide</button>
-					<button type="button" onclick="createDominos()">Step 3: Create</button>
+					<button type="button" onclick="createDominos()">Step 3: Create</button> <br>
+					Or auto step <br>
+					<button id="buttonAutostep" type="button" onclick="autoStep()">AutoStep 1: Delete</button>
 				</td>
 				<td>
 					<form action="">
