--- a/index.html
+++ b/index.html
@@ -1,59 +1,244 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<script src="ArticCircle.js"></script>
-		<script src="draw.js"></script>
-		<style>
-			body{
-				font-family: "Arial";
-			}
-			table{
-				border: 1px solid black;
-				border-collapse: collapse;
-				text-align: center;
-			}
-			table th {
-				border-left: 1px solid black;
-			}
-			table td {
-				border-left: 1px solid black;
-			}
-			canvas{
-				border: 1px solid black;
-			}
-		</style>
-	</head>
-	<body>
-		<h1>Artic Circle</h1>
-		<table width=800px>
-			<tr>
-				<th>Seed</th>
-				<th>Iteration</th>
-				<th>Render Option</th>
-			</tr>
-			<tr>
-				<td>
-					<button type="button" onclick="init()">Set a seed</button>
-				</td>
-				<td>
-					<button type="button" onclick="next()">Iterate!</button> <br>
-					Or step by step <br>
-					<button type="button" onclick="deleteDominos()">Step 1: Delete</button>
-					<button type="button" onclick="slideDominos()">Step 2: Slide</button>
-					<button type="button" onclick="createDominos()">Step 3: Create</button> <br>
-					Or auto step <br>
-					<button id="buttonAutostep" type="button" onclick="autoStep()">AutoStep 1: Delete</button>
-				</td>
-				<td>
-					<form action="">
-						<input id="radioButton1" type="radio" name="renderType" value="1" onclick="draw()" checked="checked"> Render 1 <br>
-						<input id="radioButton2" type="radio" name="renderType" value="2" onclick="draw()"> Render 2 <br>
-						Block size: <input id="textbox1" type="text" value="5">
-					</form>
-				</td>
-			</tr>
-		</table>
-		<br>
-		<canvas id="canvas1" width="800" height="600"></canvas>
-	</body>
+
+<head>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+		integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+	<style>
+		body {
+			background-color: rgb(240, 240, 240);
+		}
+
+		main {
+			background-color: white;
+		}
+
+		svg {
+			border: 1px solid black;
+		}
+	</style>
+
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.9.0/d3.min.js"
+		integrity="sha512-vc58qvvBdrDR4etbxMdlTt4GBQk1qjvyORR2nrsPsFPyrs+/u5c3+1Ct6upOgdZoIl7eq6k3a1UPDSNAQi/32A=="
+		crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+</head>
+
+<body>
+	<main class="container">
+		<div class="row">
+			<div class="column">
+				<div style="height:20px"></div>
+				<div style="height:20px"></div>
+
+				<h1>Domino Shuffling Algorithm on Aztec Diamond</h1>
+
+				<div style="height:20px"></div>
+
+				<p>
+					This is an animated generation of a Random Domino Tiling on a Aztec Diamond.
+				</p>
+				<p>
+					The algorithm that produces this Random Domino Tiling is called
+					<a href="https://www.combinatorics.org/ojs/index.php/eljc/article/view/v13i1r30">Domino
+						Shuffling</a>
+					and it is uniformly sampling a domino tiling.
+					The surprising effect is that, a uniformly sampled domino tiling tends to "froze" on corners,
+					outside of a circle called <a href="https://arxiv.org/abs/math/9801068">Arctic Circle</a>.
+				</p>
+
+				<div style="height:20px"></div>
+
+				<div class="row">
+					<div class="col">
+						<div class="card">
+							<div class="card-body">
+								<h5 class="card-title">Iteration Control</h5>
+								<div class="card-text">
+									<div class="row">
+										<div class="col">
+											<span>Step by step</span><br>
+											<div class="btn-group" role="group" aria-label="Basic example">
+												<button id="step1Button" class="btn btn-primary" type="button"
+													onclick="handleClickButtonStep1()">
+													Step 1: Delete
+												</button>
+												<button id="step2Button" class="btn btn-primary" type="button"
+													onclick="handleClickButtonStep2()">
+													Step 2: Move
+												</button>
+												<button id="step3Button" class="btn btn-primary" type="button"
+													onclick="handleClickButtonStep3()">
+													Step 3: Fill
+												</button>
+											</div>
+										</div>
+									</div>
+									<div class="row">
+										<div class="col">
+											<span>Automatically switched step</span><br>
+											<button id="autostepButton" class="btn btn-primary" type="button"
+												onclick="handleClickButtonStepAuto()">
+												--
+											</button>
+										</div>
+									</div>
+									<div class="row">
+										<div class="col">
+											<span>Combined steps</span><br>
+											<button class="btn btn-primary" type="button"
+												onclick="handleClickButtonStep123()">
+												Step 1 + 2 + 3
+											</button>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col">
+						<div class="card">
+							<div class="card-body">
+								<h5 class="card-title">Clear Dominoes</h5>
+								<button id="resetButton" class="btn btn-primary" type="button"
+									onclick="handleClickButtonReset()">
+									Reset
+								</button>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div style="height:20px"></div>
+				<svg id="aztecDiamondSvg" width="800" height="600" class="rounded mx-auto d-block img-fluid"></svg>
+				<div style="height:20px"></div>
+				<p>
+				<h4>References</h4>
+				<ul>
+					<li><a href="https://doi.org/10.48550/arXiv.math/9201305">
+							Elkies, N., Kuperberg, G., Larsen, M., & Propp, J. (1992). Alternating sign matrices and
+							domino tilings. arXiv. https://doi.org/10.48550/ARXIV.MATH/9201305</a></li>
+					<li><a href="https://doi.org/10.37236/1056">
+							Janvresse, É., Rue, T. de la, & Velenik, Y. (2006). A Note on Domino Shuffling. In The
+							Electronic Journal of Combinatorics (Vol. 13, Issue 1). The Electronic Journal of
+							Combinatorics. https://doi.org/10.37236/1056</a></li>
+					<li><a href="https://doi.org/10.48550/arXiv.math/9801068">
+							Jockusch, W., Propp, J., & Shor, P. (1998). Random Domino Tilings and the Arctic Circle
+							Theorem (Version 1). arXiv. https://doi.org/10.48550/ARXIV.MATH/9801068</a></li>
+				</ul>
+				</p>
+				<p>
+					Algorithm is implemented in javascript by tada-s.
+					Visualization and animation is done using <a href="https://d3js.org/">D3.js</a>.
+				</p>
+			</div>
+		</div>
+	</main>
+</body>
+
+<script src="ArrayMap.js"></script>
+<script src="ArticCircle.js"></script>
+<script src="draw.js"></script>
+<script>
+	// DOM Elements
+	const aztecDiamondSvgElement = document.getElementById("aztecDiamondSvg");
+	const step1ButtonElement = document.getElementById(`step1Button`);
+	const step2ButtonElement = document.getElementById(`step2Button`);
+	const step3ButtonElement = document.getElementById(`step3Button`);
+	const autostepButtonElement = document.getElementById("autostepButton")
+
+	// Aztec Diamond
+	let aztecDiamond = new AztecDiamond();
+
+	// Step state
+	let stepState = null;
+	function updateState(newStepState) {
+		stepState = newStepState;
+
+		step1ButtonElement.disabled = true;
+		step2ButtonElement.disabled = true;
+		step3ButtonElement.disabled = true;
+
+		({
+			1: step1ButtonElement,
+			2: step2ButtonElement,
+			3: step3ButtonElement,
+		}[stepState]).disabled = false;
+
+		autostepButtonElement.textContent = {
+			1: "AutoStep 1: Delete",
+			2: "AutoStep 2: Move",
+			3: "AutoStep 3: Fill",
+		}[stepState];
+	}
+
+	// Events handlers
+	window.onload = function handleOnLoadWindow() {
+		for (let i = 0; i < 20; i++) {
+			aztecDiamond.deleteCollidingDominoes();
+			aztecDiamond.moveDominoes();
+			aztecDiamond.incrementOrder();
+			aztecDiamond.fillDominoes();
+		}
+		updateState(1);
+		new ResizeObserver(() => {
+			updateAztecDiamondSvg(aztecDiamondSvgElement, aztecDiamond);
+		}).observe(aztecDiamondSvgElement)
+	};
+
+	function handleClickButtonStep1() {
+		aztecDiamond.deleteCollidingDominoes();
+		updateAztecDiamondSvg(aztecDiamondSvgElement, aztecDiamond);
+		updateState(2);
+	}
+
+	function handleClickButtonStep2() {
+		aztecDiamond.moveDominoes();
+		aztecDiamond.incrementOrder();
+		updateAztecDiamondSvg(aztecDiamondSvgElement, aztecDiamond);
+		updateState(3);
+	}
+
+	function handleClickButtonStep3() {
+		aztecDiamond.fillDominoes();
+		updateAztecDiamondSvg(aztecDiamondSvgElement, aztecDiamond);
+		updateState(1);
+	}
+
+	function handleClickButtonStep123() {
+		if (stepState <= 1) {
+			aztecDiamond.deleteCollidingDominoes();
+		}
+		if (stepState <= 2) {
+			aztecDiamond.moveDominoes();
+			aztecDiamond.incrementOrder();
+		}
+		if (stepState <= 3) {
+			aztecDiamond.fillDominoes();
+		}
+		updateAztecDiamondSvg(aztecDiamondSvgElement, aztecDiamond);
+		updateState(1);
+	}
+
+	function handleClickButtonStepAuto() {
+		if (stepState == 1) {
+			aztecDiamond.deleteCollidingDominoes();
+			updateState(2);
+		} else if (stepState == 2) {
+			aztecDiamond.moveDominoes();
+			aztecDiamond.incrementOrder();
+			updateState(3);
+		} else if (stepState == 3) {
+			aztecDiamond.fillDominoes();
+			updateState(1);
+		}
+		updateAztecDiamondSvg(aztecDiamondSvgElement, aztecDiamond);
+	}
+
+	function handleClickButtonReset() {
+		aztecDiamond = new AztecDiamond();
+		aztecDiamond.incrementOrder();
+		updateState(3);
+		updateAztecDiamondSvg(aztecDiamondSvgElement, aztecDiamond);
+	}
+</script>
+
 </html>
